--- a/summary.ipynb
+++ b/summary.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 119,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "outputs": [],
    "source": [
     "raw_data_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/2022 v2 Annual Technology Baseline Workbook Corrected 7-21-2022.xlsx'\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "outputs": [],
    "source": [
     "ancillary = pd.read_excel(ancillary_path)\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "outputs": [],
    "source": [
     "# get all the name of the sheets -> intersect with tech list\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "outputs": [],
    "source": [
     "sheets = {}\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 124,
    "outputs": [],
    "source": [
     "# iterate over the sub-tech groups\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 125,
    "outputs": [],
    "source": [
     "import collections\n",
@@ -274,12 +274,12 @@
     "    # iterate over the indexes\n",
     "    for index in indexes:\n",
     "        index_df = df[(df['Index']==index)]\n",
+    "        baseline = pd.to_numeric(index_df[baseline_year])\n",
     "        range_list = [-1, -1]\n",
     "        # iterate over years\n",
     "        for year in year_list[1:]:\n",
     "            try:\n",
     "                target_year = pd.to_numeric(index_df[year])\n",
-    "                baseline = pd.to_numeric(index_df[baseline_year])\n",
     "                min_ratio = (target_year/baseline).min()\n",
     "                max_ratio = (target_year/baseline).max()\n",
     "                range_list = [min_ratio, max_ratio]\n",
@@ -296,7 +296,8 @@
     "\n",
     "            finally:\n",
     "                year_dict[str(year)] = range_list.copy()\n",
-    "\n",
+    "        ddd['Baseline-'+str(index)]['Lower Bound'][tech] = baseline.min()\n",
+    "        ddd['Baseline-'+str(index)]['Upper Bound'][tech] = baseline.max()\n",
     "        ddd[index][tech] = year_dict.copy()"
    ],
    "metadata": {
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 126,
    "outputs": [],
    "source": [
     "# iterate over the out most layer of the 3-d dictionary\n",
@@ -317,18 +318,6 @@
     "        index_df = pd.DataFrame(index_dict)\n",
     "        index_df.to_excel(writer, sheet_name=''.join(x+' 'for x in str(index).split()[:2]))"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
