Round floats to 2 digits

--- a/summary.ipynb
+++ b/summary.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 127,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 128,
    "outputs": [],
    "source": [
     "raw_data_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/2022 v2 Annual Technology Baseline Workbook Corrected 7-21-2022.xlsx'\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 129,
    "outputs": [],
    "source": [
     "ancillary = pd.read_excel(ancillary_path)\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 130,
    "outputs": [],
    "source": [
     "# get all the name of the sheets -> intersect with tech list\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 131,
    "outputs": [],
    "source": [
     "sheets = {}\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 132,
    "outputs": [],
    "source": [
     "# iterate over the sub-tech groups\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 133,
    "outputs": [],
    "source": [
     "import collections\n",
@@ -282,11 +282,18 @@
     "                target_year = pd.to_numeric(index_df[year])\n",
     "                min_ratio = (target_year/baseline).min()\n",
     "                max_ratio = (target_year/baseline).max()\n",
-    "                range_list = [min_ratio, max_ratio]\n",
     "\n",
     "                if np.isnan(max_ratio) or np.isnan(min_ratio):\n",
     "                    if (index_df[year]==0).all():\n",
     "                        range_list = [0, 0]\n",
+    "\n",
+    "                else:\n",
+    "                    # round the floats\n",
+    "                    min_ratio = round(min_ratio, 2)\n",
+    "                    max_ratio = round(max_ratio, 2)\n",
+    "\n",
+    "                    range_list = [min_ratio, max_ratio]\n",
+    "\n",
     "\n",
     "            except ZeroDivisionError as e:\n",
     "                if (index_df[year]==0).all():\n",
@@ -309,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 134,
    "outputs": [],
    "source": [
     "# iterate over the out most layer of the 3-d dictionary\n",
