Transpose the summary sheets to cater the needs

--- a/summary.ipynb
+++ b/summary.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "raw_data_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/2022 v2 Annual Technology Baseline Workbook Corrected 7-21-2022.xlsx'\n",
     "\n",
-    "ancillary_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/ancillary.xlsx'\n",
+    "ancillary_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/anci0921.xlsx'\n",
     "\n",
     "raw = pd.ExcelFile(raw_data_path)\n",
     "\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "ancillary = pd.read_excel(ancillary_path)\n",
@@ -78,7 +78,7 @@
     "tech_sheet_dict = dict(ancillary[['Tech', 'Sheet']].values)\n",
     "\n",
     "# make tech list out of ancillary\n",
-    "tech_list = list(ancillary['Tech'].values)\n",
+    "tech_list = list(ancillary['Tech'].dropna().values)\n",
     "\n",
     "# make index list out of ancillary\n",
     "index_list = list(ancillary['Index'].dropna().values)\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "# get all the name of the sheets -> intersect with tech list\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "sheets = {}\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "# iterate over the sub-tech groups\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "import collections\n",
@@ -316,15 +316,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "# iterate over the out most layer of the 3-d dictionary\n",
     "with pd.ExcelWriter(summary_path, mode='w') as writer:\n",
     "    for index, index_dict in ddd.items():\n",
     "        index_df = pd.DataFrame(index_dict)\n",
+    "        # transpose the dataframe\n",
+    "        if not 'Baseline' in str(index).split('-'):\n",
+    "            index_df = index_df.T\n",
     "        index_df.to_excel(writer, sheet_name=''.join(x+' 'for x in str(index).split()[:2]))"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
