Translate tech names to chiense, and change the decials to 4 digits to cater the need

--- a/summary.ipynb
+++ b/summary.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -47,12 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "outputs": [],
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function ZipFile.__del__ at 0x7fea193e93f0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/zhixuan/opt/anaconda3/envs/3e-data-wiz/lib/python3.10/zipfile.py\", line 1817, in __del__\n",
+      "    self.close()\n",
+      "  File \"/Users/zhixuan/opt/anaconda3/envs/3e-data-wiz/lib/python3.10/zipfile.py\", line 1834, in close\n",
+      "    self.fp.seek(self.start_dir)\n",
+      "ValueError: seek of closed file\n"
+     ]
+    }
+   ],
    "source": [
     "raw_data_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/2022 v2 Annual Technology Baseline Workbook Corrected 7-21-2022.xlsx'\n",
     "\n",
-    "ancillary_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/anci0921.xlsx'\n",
+    "ancillary_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/ancillary.xlsx'\n",
     "\n",
     "raw = pd.ExcelFile(raw_data_path)\n",
     "\n",
@@ -69,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "ancillary = pd.read_excel(ancillary_path)\n",
@@ -83,8 +97,11 @@
     "# make index list out of ancillary\n",
     "index_list = list(ancillary['Index'].dropna().values)\n",
     "\n",
-    "# make year list out of anicllary\n",
+    "# make year list out of ancillary\n",
     "year_list = list(ancillary['Year'].dropna().values)\n",
+    "\n",
+    "# make translation dictionary out of ancillary\n",
+    "tech_chinese = dict(ancillary[['Tech', 'Chinese']].values)\n",
     "\n",
     "# flush-flush\n",
     "del ancillary, ancillary_path"
@@ -112,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "# get all the name of the sheets -> intersect with tech list\n",
@@ -128,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "sheets = {}\n",
@@ -188,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "# iterate over the sub-tech groups\n",
@@ -253,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "import collections\n",
@@ -289,8 +306,8 @@
     "\n",
     "                else:\n",
     "                    # round the floats\n",
-    "                    min_ratio = round(min_ratio, 2)\n",
-    "                    max_ratio = round(max_ratio, 2)\n",
+    "                    min_ratio = round(min_ratio, 4)\n",
+    "                    max_ratio = round(max_ratio, 4)\n",
     "\n",
     "                    range_list = [min_ratio, max_ratio]\n",
     "\n",
@@ -303,9 +320,9 @@
     "\n",
     "            finally:\n",
     "                year_dict[str(year)] = range_list.copy()\n",
-    "        ddd['Baseline-'+str(index)]['Lower Bound'][tech] = baseline.min()\n",
-    "        ddd['Baseline-'+str(index)]['Upper Bound'][tech] = baseline.max()\n",
-    "        ddd[index][tech] = year_dict.copy()"
+    "        ddd['Baseline-'+str(index)]['Lower Bound'][tech_chinese[tech]] = baseline.min()\n",
+    "        ddd['Baseline-'+str(index)]['Upper Bound'][tech_chinese[tech]] = baseline.max()\n",
+    "        ddd[index][tech_chinese[tech]] = year_dict.copy()"
    ],
    "metadata": {
     "collapsed": false,
@@ -316,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "# iterate over the out most layer of the 3-d dictionary\n",
@@ -337,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "outputs": [],
    "source": [],
    "metadata": {
