added chinese monetary conversion

--- a/summary.ipynb
+++ b/summary.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -47,22 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <function ZipFile.__del__ at 0x7fea193e93f0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/zhixuan/opt/anaconda3/envs/3e-data-wiz/lib/python3.10/zipfile.py\", line 1817, in __del__\n",
-      "    self.close()\n",
-      "  File \"/Users/zhixuan/opt/anaconda3/envs/3e-data-wiz/lib/python3.10/zipfile.py\", line 1834, in close\n",
-      "    self.fp.seek(self.start_dir)\n",
-      "ValueError: seek of closed file\n"
-     ]
-    }
-   ],
+   "execution_count": 24,
+   "outputs": [],
    "source": [
     "raw_data_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/2022 v2 Annual Technology Baseline Workbook Corrected 7-21-2022.xlsx'\n",
     "\n",
@@ -83,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "ancillary = pd.read_excel(ancillary_path)\n",
@@ -129,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# get all the name of the sheets -> intersect with tech list\n",
@@ -145,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "sheets = {}\n",
@@ -185,7 +171,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -205,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# iterate over the sub-tech groups\n",
@@ -248,7 +235,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -270,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import collections\n",
@@ -309,7 +297,10 @@
     "                    min_ratio = round(min_ratio, 4)\n",
     "                    max_ratio = round(max_ratio, 4)\n",
     "\n",
-    "                    range_list = [min_ratio, max_ratio]\n",
+    "                    if min_ratio == max_ratio:\n",
+    "                        range_list = min_ratio\n",
+    "                    else:\n",
+    "                        range_list = [min_ratio, max_ratio]\n",
     "\n",
     "\n",
     "            except ZeroDivisionError as e:\n",
@@ -319,21 +310,28 @@
     "                    debug_session.append([str(tech), str(index), str(year)])\n",
     "\n",
     "            finally:\n",
-    "                year_dict[str(year)] = range_list.copy()\n",
-    "        ddd['Baseline-'+str(index)]['Lower Bound'][tech_chinese[tech]] = baseline.min()\n",
-    "        ddd['Baseline-'+str(index)]['Upper Bound'][tech_chinese[tech]] = baseline.max()\n",
+    "                try:\n",
+    "                    year_dict[str(year)] = range_list.copy()\n",
+    "                except AttributeError:\n",
+    "                    year_dict[str(year)] = range_list\n",
+    "\n",
+    "        ddd['Baseline-'+str(index)]['Lower Bound'][tech_chinese[tech]] = round(baseline.min(), 4)\n",
+    "        ddd['Baseline-'+str(index)]['Upper Bound'][tech_chinese[tech]] = round(baseline.max(), 4)\n",
+    "        ddd['Baseline-'+str(index)]['Upper Bound (CNY)'][tech_chinese[tech]] = round(baseline.max()/0.145, 4)\n",
+    "        ddd['Baseline-'+str(index)]['Lower Bound (CNY)'][tech_chinese[tech]] = round(baseline.min()/0.145, 4)\n",
     "        ddd[index][tech_chinese[tech]] = year_dict.copy()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# iterate over the out most layer of the 3-d dictionary\n",
@@ -348,19 +346,21 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
