Further modification on the new range column in baseline sheets

--- a/summary.ipynb
+++ b/summary.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "raw_data_path = '/Users/zhixuan/PycharmProjects/ATB-Raw-Summarization/data/2022 v2 Annual Technology Baseline Workbook Corrected 7-21-2022.xlsx'\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "ancillary = pd.read_excel(ancillary_path)\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "# get all the name of the sheets -> intersect with tech list\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "sheets = {}\n",
@@ -171,8 +171,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -317,8 +316,12 @@
     "\n",
     "        ddd['Baseline-'+str(index)]['Lower Bound'][tech_chinese[tech]] = round(baseline.min(), 4)\n",
     "        ddd['Baseline-'+str(index)]['Upper Bound'][tech_chinese[tech]] = round(baseline.max(), 4)\n",
-    "        ddd['Baseline-'+str(index)]['Upper Bound (CNY)'][tech_chinese[tech]] = round(baseline.max()/0.145, 4)\n",
     "        ddd['Baseline-'+str(index)]['Lower Bound (CNY)'][tech_chinese[tech]] = round(baseline.min()/0.145, 4)\n",
+    "        ddd['Baseline-'+str(index)]['Upper Bound (CNY)'][tech_chinese[tech]] = round(baseline.max()/0.145, 4)\n",
+    "        if not baseline.min() == baseline.max():\n",
+    "            ddd['Baseline-'+str(index)]['Range'][tech_chinese[tech]] = \"[\"+str(ddd['Baseline-'+str(index)]['Lower Bound (CNY)'][tech_chinese[tech]])+\",\"+str(ddd['Baseline-'+str(index)]['Upper Bound (CNY)'][tech_chinese[tech]])+\"]\"\n",
+    "        else:\n",
+    "            ddd['Baseline-'+str(index)]['Range'][tech_chinese[tech]] = ddd['Baseline-'+str(index)]['Upper Bound (CNY)'][tech_chinese[tech]]\n",
     "        ddd[index][tech_chinese[tech]] = year_dict.copy()"
    ],
    "metadata": {
